# individuals-api/src/main/java/com/example/individualsapi/controller/PaymentController.java
@@ -8,6 +8,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
 @RestController
 @RequestMapping("${individuals-api.path}/payments")
@@ -17,7 +18,12 @@ public class PaymentController {
 
     @GetMapping("/{currencyCode}/{countryCode}")
     public Flux<PaymentMethodResponseDto> getAvailablePaymentMethods(@PathVariable String currencyCode,
-                                                                           @PathVariable String countryCode) {
+                                                                     @PathVariable String countryCode) {
         return service.getAvailable(currencyCode, countryCode);
+    }
+
+    @GetMapping("/{methodId}")
+    public Mono<PaymentMethodResponseDto> getAvailablePaymentMethods(@PathVariable String methodId) {
+        return service.getById(methodId);
     }
 }
