# payment-service/src/main/java/com/example/paymentservice/controller/PaymentMethodController.java
@@ -8,6 +8,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.UUID;
 
 @RestController
 @RequiredArgsConstructor
@@ -17,5 +18,10 @@ public class PaymentMethodController implements PaymentMethodApi {
     @Override
     public ResponseEntity<List<PaymentMethodResponse>> getPaymentMethods(String authorization, String currencyCode, String countryCode) {
         return ResponseEntity.ok(service.get(currencyCode, countryCode));
+    }
+
+    @Override
+    public ResponseEntity<PaymentMethodResponse> getPaymentMethodById(String authorization, String methodId) {
+        return ResponseEntity.ok(service.getById(UUID.fromString(methodId)));
     }
 }
